--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="start-header" data-started="false">
-    <h1 class="gradient" data-text="Give me a random beer!">Give me a random beer!</h1>
-    <button id="giveMeABeerPlease" class="btn btn-start">please</button>
-</header>
+<div class="grid">
+<div>
+    <header class="start-header" data-started="false">
+        <h1 class="gradient" data-text="Give me a random beer!">Give me a random beer!</h1>
+        <button id="giveMeABeerPlease" class="btn btn-start">please</button>
+    </header>
+</div>
+<section></section>
+</div>
 <script src="src/main.js" type="module"></script>
 </body>
 </html>
