Add visualization of the data with a transition

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
         <button id="giveMeABeerPlease" class="btn btn-start">please</button>
     </header>
 </div>
-<section></section>
+<div>
+    <section class="beer-section">
+        <img src="https://images.punkapi.com/v2/178.png" alt="" class="beer-thumbnail" id="beerThumb">
+        <h1 id="beerTitle">Beer Title</h1>
+        <p id="beerDesc">Beer Description</p>
+        <ul>
+            <li id="beerSour">Not Sour</li>
+            <li id="beerBrewed">First brewed 12 years ago</li>
+        </ul>
+    </section>
+</div>
 </div>
 <script src="src/main.js" type="module"></script>
 </body>
