--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </section>
 </div>
 </div>
-<script src="src/main.js" type="module"></script>
+<script src="src/newMain.js" type="module"></script>
 </body>
 </html>
